--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 [Oo]bj/
 [Tt]emp/
 [Uu]nityGenerated/
+[Bb]uilds/
+[Ll]ogs/
+[Uu]ser[Ss]ettings/
 # file on crash reports
 sysinfo.txt
 # Unity3D generated meta files
