--- a/.gitignore
+++ b/.gitignore
@@ -86,7 +86,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
-Logs/
-UserSettings/
-ProjectSettings/
-BuildGameLocal/
+Logs/*
+UserSettings/*
+ProjectSettings/*
+BuildGameLocal/*
